<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="130dp"
    android:background="#88000000"
    >

    <LinearLayout
        android:id="@+id/home_dialog_Ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_home_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitle_Tv"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/home_ready_finish"
            android:textColor="@color/home_ready_finish"
            android:textSize="@dimen/home_tv_ready_finish" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/home_lines" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_home_dialog"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homeCancel_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_cancel"
                android:textSize="@dimen/home_tv_ready_finish"
                android:textColor="@color/home_tv_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/home_lines" />

            <TextView
                android:id="@+id/homeSure_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/home_tv_ready_finish"
                android:text="@string/home_sure"
                android:textColor="@color/home_tv_sure" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
